client/src/theme/styles/components/global/forms/_form-inputs-secondary.scss
// Secondary form inputs. These include all of the form inputs (and more)
// Outlined in 'form-inputs-primary', but change visually with this wrapper.
@mixin formInputSecondary {
  @include formInputPrimary;
  box-sizing: border-box;
  width: 100%;
  // Explicit height so that elements can line up
  height: 32px;
  // Declared in em as it should change with font size
  padding: 0;
  font-size: 16px;
  vertical-align: top;
  background-color: transparent;
  // Override border
  border: 0;
  border-bottom: 1px solid $neutralUIDullLight;
  outline: 0;
  transition: border-color $duration $timing;

  @include respond($break60) {
    height: 42px;
    font-size: 18px;
  }

  &::placeholder {
    color: $neutralUILight;
  }

  .bg-neutral90 & {
    &:-webkit-autofill {
      box-shadow: 0 0 0 1000px $neutral90 inset;
      // Important required to override chrome default
      /* stylelint-disable declaration-no-important */
      -webkit-text-fill-color: $accentPrimaryPale !important;
      /* stylelint-enable declaration-no-important */
    }
  }
}

/* I'm sorry for everything --ZD */
.form-section .form-input-group > .form-input .form-select--rounded .form-select {
  width: auto;
}

.form-secondary {
  .drawer-primary & {
    margin-bottom: 80px;
  }

  .form-input + .form-input,
  .form-input + .form-section,
  .form-section + .form-section,
  .form-section + .form-input {
    margin-top: 20px;

    @include respond($break60) {
      margin-top: 40px;
    }
  }

  .form-header {
    @include roundedFormHeader;

    @include respond($break90) {
      margin-bottom: 38px;
    }
  }

  .instructions {
    @include templateCopy;
    display: block;
    margin-top: 0.75em;
    font-size: 15px;
    font-style: italic;
    text-transform: none;

    @include respond($break60) {
      font-size: 17px;
    }

    &.space-bottom {
      margin-bottom: 2em;
    }

    &--inline {
      display: inline;
    }

    + .form-input-group--primary {
      margin-top: 32px;
    }

    + .form-input-group--secondary {
      margin-top: 24px;
    }

    a, a:visited {
      color: inherit;
    }
  }

  .notification {
    @include templateCopy;
    display: block;
    margin-top: 0.75em;
    font-size: 17px;
    font-style: italic;
    color: $accentInteractionLight;
    text-align: right;
    text-transform: none;
  }

  .form-input {
    .form-input-heading, .column-heading, label:not(.checkbox):not(.radio):not(.toggle):not(.icon-picker):not(.form-switch) {
      @include formLabelPrimary;
      display: block;
      margin-top: 0;
      margin-bottom: 0.5em;

      &.below {
        margin-top: 0.6em;
        margin-bottom: 0;
      }

      &.secondary {
        font-weight: normal;
      }
    }

    input[type='text'], input[type='email'], input[type='password'], input[type='number'] {
      @include formInputSecondary;
      transition: border-color $duration $timing;

      &:focus-visible {
        border-color: $defaultFocusColor;
      }
    }

    textarea {
      @include templateCopy;
      width: 100%;
      padding: 1.2em;
      font-size: 16px;
      color: $neutralTextExtraLight;
      resize: vertical;
      background-color: transparent;
      border: 1px solid $neutralUIDullLight;
      outline: none;
      transition: border-color $duration $timing;

      @include respond($break70) {
        padding: 1.579em;
        font-size: 18px;
      }

      &::placeholder {
        color: $neutralUILight;
      }

      &:focus-visible {
        border-color: $accentPrimary;
      }
    }

    &.form-number-input {
      input[type='number']::-webkit-inner-spin-button,
      input[type='number']::-webkit-outer-spin-button {
        -webkit-appearance: none; // stylelint-disable-line
        margin: 0;
      }

      input[type='number'] {
        text-align: right;
      }
    }

    .form-toggle {
      .toggle-label {
        transition: color $duration $timing;
      }

      &.checked .toggle-label {
        color: $defaultHoverColor;
      }
    }

    &.form-toggle-secondary {
      // styled is fudged to look like other inputs
      // though functionality is different
      position: relative;

      .form-input-heading {
        @include formInputSecondary;
        margin-bottom: 0.5em;
        text-transform: inherit;
        letter-spacing: inherit;

        @include respond($break60) {
          height: 38px;
        }

        &.toggle {
          color: $neutralTextExtraLight;
        }
      }

      .toggle-indicator {
        position: absolute;
        top: 2px;
        right: 0;
      }

      .instructions {
        margin-bottom: 0;
      }
    }

    .button-secondary {
      display: inline-block;
      width: auto;

      &.button-secondary--wide {
        display: block;
        width: 100%;
      }
    }

    &.submit {
      .button-secondary, .button-secondary--dull {
        line-height: normal;

        + .button-secondary {
          margin-top: 0;
          margin-left: 15px;
        }
      }
    }
  }

  // CABS scoped to secondary for now, may become global
  .form-date {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;

    @include respond($break90) {
      flex-wrap: nowrap;
    }

    > * {
      display: block;
      flex: 0 1 47.64%;
      margin-left: 0;

      @include respond($break90) {
        flex: auto;

        &:not(:first-child) {
          margin-left: 15px;
        }
      }
    }

    .form-select {
      select {
        width: auto;
        min-width: 100%;
      }
    }

    .form-input {
      flex-basis: 100%;
      margin-top: 1em;

      @include respond($break90) {
        flex-basis: auto;
        margin-top: 0;
      }
    }
  }

  // Dropdown
  .form-select {
    width: auto;

    &__icon {
      position: absolute;
      top: 42%;
      right: 4px;
      color: $accentPrimary;
      pointer-events: none;
      transform: translateY(-50%);

      // Use native dropdown arrow in IE9
      .ie9 & {
        display: none;
      }
    }

    select {
      @include formInputSecondary;
      padding: 0 42px 0.75em 0; // OD
      font-size: 16px;
      line-height: normal;
      text-transform: none; // OD

      &:focus-visible {
        border-color: $accentPrimaryLight;
      }
    }

    &.form-select--rounded {
      .form-select {
        width: auto;
      }

      .form-select__icon {
        position: absolute;
        top: 50%;
        right: 8px;
        width: auto;
        width: 22px;
        height: 22px;
        color: $neutralUIDullLight;
        pointer-events: none;
        transform: translateY(-50%);

        // Use native dropdown arrow in IE9
        .ie9 & {
          display: none;
        }
      }


      select {
        @include unstyledSelect;
        @include utilityPrimary;
        width: auto;
        height: 2.857em;
        padding-right: 32px;
        padding-bottom: 0;
        padding-left: 13px;
        overflow: hidden;
        font-size: 16px;
        font-weight: $regular;
        text-overflow: ellipsis;
        text-transform: none;
        letter-spacing: normal;
        white-space: nowrap;
        background-color: $neutral90; // required for `option` to inherit in FF
        border: 1px solid $neutralUIDullLight;
        border-radius: 8px;
        transition: border-color $duration $timing;

        &:focus-visible {
          border-color: $accentPrimary;
        }
      }
    }

  }

  // Upload dropzone and previews
  .form-dropzone {
    position: relative;
    display: flex;
    align-items: center;
    justify-content: center;
    max-width: 350px;
    min-height: 200px;
    border: 1px solid $neutralUIDullLight;
    transition: border-color 0.2s;

    .primary {
      @include utilityPrimary;
      padding-bottom: 0;
      font-size: 13px;
      font-weight: $semibold;
      line-height: 1.5em;
      text-align: center;
    }

    .error {
      display: block;
      margin-top: 10px;
      color: $defaultErrorColor;
    }

    .secondary {
      @include formLabelPrimary;
      padding-bottom: 0;
      margin-top: 10px;
      line-height: 1.5em;
      text-align: center;
    }

    a, .fake-link {
      @include defaultHoverState;

      &:focus-visible {
        outline: 0;
      }
    }

    .contents-icon-preview {
      display: flex;
      align-items: center;
      justify-content: center;
      width: 100%;

      .message {
        width: 100%;
        padding: 20px;
        word-wrap: break-word;
        overflow-wrap: break-word;
      }

      &__icon {
        display: block;
        margin: 0 auto 20px;
      }
    }

    .contents-image-preview {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      width: 100%;
      padding: 10px;

      .preview {
        max-width: 100%;
        max-height: 200px;
        background: $neutral20;
      }

      .message {
        position: absolute;
        top: 50%;
        left: 50%;
        z-index: 1;
        width: 75%;
        padding: 5px 20px 15px;
        margin-bottom: 20px;
        text-align: center;
        background: $neutral95;
        opacity: 0.9;
        transform: translate(-50%, -50%);
      }
    }

    .contents-empty {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      height: 200px;
      padding: 15px;
    }

    .remove {
      @include utilityPrimary;
      position: absolute;
      right: 4px;
      bottom: 4px;
      z-index: 2;
      font-size: 12px;
    }

    // Default height
    .cover-upload-placeholder {
      max-width: 118px;
      height: auto;
    }

    .contents-empty__icon {
      display: block;
      color: $neutralWhite;
    }
  }

  .boolean-labeled {
    display: table;

    span {
      @include formInputSecondary;
      display: table-cell;
      padding-bottom: 0.5em;
      vertical-align: middle;
    }

    .toggle-indicator {
      display: table-cell;
      padding-left: 10px;
      vertical-align: middle;
    }
  }

  .checkbox {
    margin-top: 5px;
  }
}

